Move to Java 17
Signed-off-by: Sven Strickroth <email@cs-ware.de>